Make sure only staffed_specialties are visible for search.

--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -268,6 +268,9 @@ textarea.form-control {
 		overflow: hidden;
 		background-color: #E5E5E5;
 	}
+	li {
+	  margin-left: 0px;
+	}
 }
 
 .navbar-nav > li > .dropdown-menu {
